included constructor-node assignment

--- a/style.css
+++ b/style.css
@@ -193,6 +193,12 @@ span {
     color: rgb(251, 220, 0);
 }
 
+#constructor {
+    left: 1%;
+    color: #3a3a38;
+    text-align: center;
+}
+
 
 
 
