modified portfolio.html, style.css

--- a/style.css
+++ b/style.css
@@ -199,6 +199,19 @@ span {
     text-align: center;
 }
 
+#bamazon1 {
+    left: 2%;
+    color: navy;
+    top: 22%
+}
+
+#bamazon2 {
+    left: 12%;
+    color: navy;
+    top: 40%;
+}
+
+
 
 
 
