added project2 to portfolio

--- a/style.css
+++ b/style.css
@@ -242,6 +242,20 @@ span {
     color:  #e6f2ff;
 }
 
+#scholar {
+    top: 30%;
+    color: #206f8e;
+}
+
+#scholar-project {
+    top: 48%;
+    color: #206f8e;
+}
+
+#ec {
+    color: #206f8e;
+}
+
 
 
 
