--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 #bodyPortfolio {
-    background-color: #ffffff;
+    background-color:#ffffff;
 }
 
 h1,
@@ -14,22 +14,31 @@ h3 {
     color: #424242;
 }
 
-
 a {
     color: #424242;
     text-decoration: none;
     font-size: 20px;
 }
 
+
 #about-background {
     position: absolute;
     font-family: "Playfair Display";
     color: #e8e8e8;
-    font-size: 12em;
-    left: 20%;
+    font-size: 14em;
+    left: auto;
+    right: auto;
     top: 20%;
     z-index: -1;
+}
 
+#bio {
+    position: absolute;
+    z-index: 0;
+    top: 30%;
+    right: auto;
+    left: auto;
+    font-family: "Montserrat";
 }
 
 #contact-background {
@@ -37,30 +46,67 @@ a {
     font-family: "Playfair Display";
     color: #e8e8e8;
     font-size: 9em;
-    left: 20%;
+    left: 40%;
     top: 65%;
     z-index: -1;
-}
-
-#bio {
-    position: absolute;
-    z-index: 0;
-    top: 35%;
-    left: 20%;
-    width: 70%;
-    font-family: 'Montserrat';
 }
 
 #contactContainer {
     position: absolute;
     z-index: 0;
     top: 75%;
-    left: 28%;
+    left: 55%;
     width: 70%;
     font-family: 'Montserrat';
 }
 
+@media only screen and ( max-width: 768px) {
+    #about-background {
+        font-size: 14em;
+    }
+    
+    #bio {
+        top: 25%;
+    }
+    
+    #contact-background {
+        font-size: 8em;
+        left: auto;
+        right:auto;
+        top: 65%;
+    }
+    
+    #contactContainer {
+        left: 28%;
+        right: auto;
+    }
+    
+}
 
+@media screen and (max-width: 640px) {
+    #about-background {
+        color: #424242;
+        font-size: 1.9em;
+        top: 20%;
+    }
+    
+    #bio {
+        top: 28%;
+    }
+    
+    #contact-background {
+        color: #424242;
+        font-size: 1.9em;
+        left: auto;
+        top: 75%;
+    }
+    
+    #contactContainer {
+        top: 75%;
+        left: auto;
+        top: 82%;
+    }
+}
 
 .col-lg-5 {
     background-color: #e8e8e8;
@@ -81,14 +127,13 @@ img {
     
 }
 
-.tittle {
+.title {
     position: absolute;
     z-index: 3;
     font-family: "Playfair Display";
     font-size: 60px;
     top: 30%;
     left: 15%;
-    /* letter-spacing: .1em; */
     max-width: 100%;
     
 }
@@ -171,6 +216,31 @@ span {
     opacity: 0;
 }
 
+.pack {
+    /* display: flex;
+    flex-wrap:wrap;
+    flex-direction: column;
+    justify-content: center; */
+}
+
+.line1, 
+.line2 {
+    align-items: center;
+} 
+
+.line2 {
+    top: 46%;
+}
+
+#cityseer {
+    color: black;
+}
+
+.psy1 {
+    width: 100%;
+    left: 1%;
+}
+
 #trivia {
     color: black;
     max-width: 100%;
@@ -217,24 +287,22 @@ span {
 }
 
 #node-word {
-    top: 12%;
-    left: 26%;
+    left: 25%;
 }
 
-#express-word {
-    top: 60%;
-    left: 15%;
-}
 
-#nodeex {
-    top: 12%;
-    left: 1%;
+.case1 {
+    left: 0.5%;
     color: #424242;
 }
 
-#handlebars {
-    top: 60%;
-    left: 1%;
+.case2 {
+    left: 2%;
+    color: #424242;
+}
+
+#scri {
+    color: #424242;
 }
 
 #nodeex-span,
@@ -255,6 +323,39 @@ span {
 #ec {
     color: #206f8e;
 }
+
+#java {
+    top: 50%
+}
+
+.memorygametitle {
+    color:#206f8e;
+    width: 100%;
+    left: 3%;
+}
+
+.react {
+   left: 20%;
+}
+
+.googlebooks {
+    width: 100%;
+    left: 1%;
+}
+
+.economist {
+    color:#206f8e;
+}
+
+.triangulate {
+    color:  #e6f2ff;
+}
+
+.mern {
+    left: 25%;
+}
+
+
 
 
 
